[package]
name = "bf-gen"
version = "0.1.0"
authors = ["Nick Samson <me@nicksamson.com>"]
edition = "2018"

[[bin]]
name = "hello"
path = "src/bin/hello.rs"

[[bin]]
name = "hanoi"
path = "src/bin/hanoi.rs"

[[bin]]
name = "long"
path = "src/bin/long.rs"

[[bin]]
name = "mandelbrot"
path = "src/bin/mandelbrot.rs"

[dependencies]
bf = { path = "../bf" }